Update Fix Align, AuctionAdded Stuff

--- a/CapstoneProject/Content/bootstrap.css
+++ b/CapstoneProject/Content/bootstrap.css
@@ -376,7 +376,7 @@ svg {
 
 table {
   border-collapse: collapse;
-    margin-left: 524px;
+    margin-left: 0px;
 }
 
 caption {
